[package]
name = "m3u8_downloader"
version = "0.5.4" # + version in app params!
authors = ["DevNul <devnulpavel@gmail.com>"]
edition = "2018"
description = "Application m3u8_downloader allows to download m3u8 HLS streams by master playlist link."
license = "MIT"
keywords = ["m3u8", "hls"]
categories = ["command-line-utilities", "multimedia", "asynchronous"]
homepage = "https://github.com/DevNulPavel/m3u8_downloader"
repository = "https://github.com/DevNulPavel/m3u8_downloader"
documentation = "https://docs.rs/crate/m3u8_downloader/"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
quick-error = "2.0.0"
reqwest = { version = "0.11.0", default-features = false, features = ["rustls-tls"] }
tokio = { version = "1.0.2", default-features = false, features = ["fs", "rt", "rt-multi-thread", "net", "sync", "signal", "process", "macros"]}
futures = "0.3.12"
url = "2.2.0"
m3u8-rs = "1.0.7"
nom = "5.1.2"
bytes = "1.0.1"
async-stream = "0.3.0"
chrono = "0.4.19"
clap = "2.33.3"
log = "0.4.13"
pretty_env_logger = "0.4.0"
colored = "2.0.0"